--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "zeep"
-version = "4.3.2"
+version = "4.3.2+ebaytradingapi"
 description = "A Python SOAP client"
 readme = "README.md"
 license = { text = "MIT" }
