--- a/.github/workflows/branch_merge.yml
+++ b/.github/workflows/branch_merge.yml
@@ -12,7 +12,7 @@ jobs:
     permissions:
       pull-requests: write
     steps:
-      - uses: praha-inc/action-restrict-base-branch
+      - uses: praha-inc/action-restrict-base-branch@v1.0.2
         with:
           rules: |
             feature/* <- feature/* feature/**/*
