--- a/.github/workflows/branch_merge.yml
+++ b/.github/workflows/branch_merge.yml
@@ -17,3 +17,4 @@ jobs:
           rules: |
             feature/* <- feature/* feature/**/*
             release/* <- feature/* feature/**/*
+            main <- main
