--- a/.github/workflows/auto-rebase-main.yml
+++ b/.github/workflows/auto-rebase-main.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout Forked Repository
         uses: actions/checkout@v6
+        with:
+          fetch-depth: 0
       - name: Rebase on mvantellingen/python-zeep
         run: |
           git config --global user.name "python-zeep-admin"
@@ -18,5 +20,5 @@ jobs:
           git remote add upstream https://github.com/mvantellingen/python-zeep.git
           git checkout main
           git fetch upstream main
-          git rebase -X theirs upstream/main
+          git rebase upstream/main
           git push -f
